# bdo-pvp-helper

./: .gitignore  README.md  debug_template.py  pyproject.toml  requirements.txt  setup.sh  test_db.py
architecture_documentation/: backend.md  frontend.md
backend/aos/: api.py  database.py  extractor.py  test_output.json
class_guides/maegu/awakening/: maegu_awakening_combos_pvp.md  maegu_awakening_skill_add_ons.md
class_guides/maegu/succession/: maegu_succession_combos_pvp.md  maegu_succession_skill_add_ons.md
class_guides/ninja/awakening/: ninja_awakening_combos_pvp.md  ninja_awakening_skill_add_ons.md
class_guides/ninja/succession/: ninja_succession_combos_pvp.md  ninja_succession_skill_add_ons.md
example_images/: image_2_json.json  image_json.json
frontend/: app.js  index.html  style.css
frontend-next/: package-lock.json  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend-next/src/components/: AosSidebar.module.css  AosSidebar.tsx  BookmarkButton.module.css  BookmarkButton.tsx  ClassGuideSidebar.module.css  ClassGuideSidebar.tsx  ComboCard.module.css  ComboCard.tsx  Navbar.module.css  Navbar.tsx
frontend-next/src/lib/: auth.ts  constants.ts  guide_config.ts  guides.ts  parse_combos.ts  types.ts
frontend-next/src/types/: next-auth.d.ts
frontend_documentation/: HOW_TO.md
infrastructure/aos-data-extract/: api.py  bdo_pvp_helper.db  database.py  extractor.py  requirements.txt
tests/aos/: test_extractor.py
tests/infrastructure/aos-data-extract-tests/: test_extractor.py
(+25 files in other folders)
