[project]
name = "bdo-pvp-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
